<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashCard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="language_prompt">Choose a language</string>

    <string-array name="language_arrays">
        <item>English</item>
        <item>Viet Nam</item>
        <item>Japan</item>
    </string-array>

    <string name="loop_prompt">Choose a zie</string>

    <string-array name="loop_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_cards">CardsActivity</string>
    <string name="title_activity_sing_song">SingSongActivity</string>
    <string name="title_activity_category_play">CategoryPlayActivity</string>
    <string name="title_activity_find_cards">FindCardsActivity</string>
    <string name="install_tts_data_message">Install tts data message</string>
    <string name="install_tts_data_title">Install tts data title</string>
    <string name="ok">OK</string>
    <string name="dont_ask_again">dont ask again</string>
    <string name="not_now">not now</string>
    <string name="title_activity_fill_blank_card">FillBlankCardActivity</string>
    <string name="title_activity_puzzle">PuzzleActivity</string>
    <string name="title_activity_puzzle_image">PuzzleImageActivity</string>
    <string name="title_activity_drawing">DrawingActivity</string>
    
    <string name="start_new">New</string>
	<string name="brush">Brush</string>
	<string name="erase">Erase</string>
	<string name="save">Save</string>
	<string name="paint">Paint</string>
	<string name="sml">Small</string>
	<string name="med">Medium</string>
	<string name="lrg">Large</string>

</resources>
